--- a/styles.css
+++ b/styles.css
@@ -22,14 +22,14 @@ body, html {
     /*max-width: 100vw;*/
 }
 
-/* Second image (Rooms) */
+/* Second image (ship) */
 .bgimg-2 {
-    background-image: url("http://auxarchillndaletravels.info/images/Carnaval_Splendor.jpg");
-    min-height: 500px;
+    background-image: url('../img/Carnaval_Splendor_deck.jpg');
+    min-height: 550px;
 
 }
 
-/* Third image (Contact) */
+/* Third image (lounge) */
 .bgimg-3 {
     background-image: url("https://c1.staticflickr.com/5/4087/5188015581_57ec30c8c3_b.jpg");
     min-height: 500px;
