--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ body, html {
 
 /* Second image (ship) */
 .bgimg-2 {
-    background-image: url('../img/shipDeck.jpg');
+    background-image: url('../img/Carnaval_Splendor_deck.jpg');
     min-height: 550px;
 
 }
